--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/sonarlint/
 
 # Generated files
 .idea/**/contentModel.xml
