--- a/Dockerfile.django
+++ b/Dockerfile.django
@@ -1,9 +1,12 @@
 FROM debian:10
 
 RUN apt update\
-  && apt install -y python3 python3-pip default-libmysqlclient-dev\
+  && apt install -y python3 python3-pip default-libmysqlclient-dev cron tzdata\
   && rm -rf /var/lib/apt/lists/*\
   && pip3 install -U pip gunicorn
+
+ENV TZ=America/New_York
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN mkdir -p /app/code && mkdir -p /app/bind
 
