--- a/Dockerfile.django
+++ b/Dockerfile.django
@@ -1,11 +1,11 @@
-FROM debian:10
+FROM ubuntu:jammy
 
 ENV PIP_BREAK_SYSTEM_PACKAGES=1
 
 RUN apt update\
-  && apt install -y python3 python3-pip default-libmysqlclient-dev cron tzdata\
+  && DEBIAN_FRONTEND=noninteractive apt install -y python3 python3-pip default-libmysqlclient-dev pkg-config cron tzdata\
   && rm -rf /var/lib/apt/lists/*\
-  && pip3 install -U pip gunicorn
+  && pip3 install -U gunicorn mysqlclient
 
 ENV TZ=America/New_York
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
