--- a/Dockerfile.django
+++ b/Dockerfile.django
@@ -1,18 +1,3 @@
-FROM ubuntu:jammy
+FROM dc74089/django-base
 
-ENV PIP_BREAK_SYSTEM_PACKAGES=1
-
-RUN apt update\
-  && DEBIAN_FRONTEND=noninteractive apt install -y python3 python3-pip default-libmysqlclient-dev pkg-config cron tzdata\
-  && rm -rf /var/lib/apt/lists/*\
-  && pip3 install -U gunicorn mysqlclient
-
-ENV TZ=America/New_York
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-RUN mkdir -p /app/code && mkdir -p /app/bind
-
-WORKDIR /app/code
 COPY . /app/code
-
-CMD ./entrypoint.sh
